Ajout de Citation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<h1>Voici une simple page web</h1>
 
 	<p>Bonjour! mon animal prefere mon chien Maxime</p>
+	<p>ma citation preferee!!</p>
 
 	</body>
 </html>
